--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,11 @@ li {
     height: auto;
 }
 
+.img-container{
+    width: fit-content;
+    height: auto;
+}
+
 #desktop-logo{
 
    height: 100%;
@@ -131,7 +136,49 @@ i{
     padding: 7px;
 }
 
+.my-border-bottom{
+    border-bottom: 1px solid #f8f8f8;
+}
+
+.accordion-expand{
+    display: none;
+}
+
+.accordion-container{
+    border-bottom: 1px solid #f8f8f8;
+}
+
+.accordion-container:hover .accordion-expand{
+    display: block;
+}
+
+.accordion-container:hover i{
+    
+    transform: rotate(180deg) translate(50%, 0);
+}
+
+.hover-visible{
+    display: none;
+    position: absolute;
+    right: 40px;
+    top: 35px;
+    list-style: none;
+    padding: 10px;
+    background-color: white;
+    z-index: 2000;
+    color: #051e34;
+    font-size: 1em;
+    border-radius: 15px;
+}
+
+.bell-container:hover .hover-visible{
+    display: block;
+}
+
 @media screen and (max-width: 1000px) {
+    :root{
+        --side-width: 60px;
+    }
     .mobile-hidden{
         display: none;
         
