--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,19 @@ body{
     --side-width: 150px;
 
     --sidebar-bg: #051e34;
+    --btn-hero-bg: #165bba;
 }
 
+#plus-options{
+    width: fit-content;
+    border-radius: 50%;
+    font-size: 1em;
+    padding: 5px;
+}
+
+.btn-dark-blue{
+    background-color: var(--btn-hero-bg);
+}
 
 .debug{
     border: 1px solid black;
@@ -181,6 +192,10 @@ i{
 
 #col-top-center{
     line-height: 1em;
+}
+
+td{
+    align-items: center;
 }
 
 @media screen and (max-width: 1000px) {
